updated awards and certificates section

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                 <input type="text" id="nameInput" placeholder="Enter Name" required /><br>
                 <input type="text" id="educationInput" placeholder="Enter Education" required /><br>
                 <input type="text" id="designationInput" placeholder="Enter Designation" required /><br>
-                <button class="button" type="submit">Add Management Member</button>
+                <button class="button" type="submit">Submit</button>
             </form>
             <div class="data-section" id="managementList"></div>
         </div>
