changed names of buttons

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                 <input type="text" id="nameInput" placeholder="Enter Name" required /><br>
                 <input type="text" id="educationInput" placeholder="Enter Education" required /><br>
                 <input type="text" id="designationInput" placeholder="Enter Designation" required /><br>
-                <button class="button" type="submit">Submit</button>
+                <button class="button" id="mgmt_button" type="submit">Submit</button>
             </form>
             <div class="data-section" id="managementList"></div>
         </div>
@@ -34,7 +34,7 @@
                 <label>Upload Image:</label>
                 <input type="file" id="awardimageInput" accept="image/*" required /><br>
                 <input type="text" id="descriptionInput" placeholder="Enter Description" required /><br>
-                <button class="button" type="submit">Submit</button>
+                <button class="button" id="awd_button" type="submit">Submit</button>
             </form>
             <div class="data-section" id="awardscertificateList"></div>
         </div>
@@ -87,7 +87,7 @@
             <form id="latestUpdatesForm" enctype="multipart/form-data">
                 <input type="text" id="title" placeholder="Enter PDF description" required />
                 <input type="file" id="pdf" accept="application/pdf" required />
-                <button class="button" type="submit">Upload PDF</button>
+                <button class="button" id="updt_button" type="submit">Upload PDF</button>
             </form>
             <div class="data-section" id="latestUpdatesList"></div>
         </div>
